<resources>
    <string name="app_name">MewDict</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="nav_change_language">Viet - Anh Dictionary</string>
    <string name="nav_save">Your words</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_contribution">Contribution</string>
    <string name="nav_share">Share</string>
    <string name="nav_help">Help</string>

    <string name="en_vi">EN - VI</string>
    <string name="vi_en">VI - EN</string>


    <string name="save_word_fragment">YOUR WORDS</string>
    <string name="dict_fragment">DICT FRAGMENT</string>
    <string name="detail_fragment">DETAIL FRAGMENT</string>

    <string name="btn_go_to_detail">GO TO DETAIL</string>

    <string name="action_clear">CLEAR</string>
    <string name="mewdict">MEWDICT</string>

    <string name="help_speak">Click this image to check pronunciation</string>
    <string name="help_saveword">Click this image to save your word </string>
    <string name="help_bin">Click this image to remove your saving word</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <!-- info-->
    <string name="nhabui">Bùi Xuân Nhã</string>
    <string name="mssv_nha">MSSV: 17520834</string>
    <string name="gmail_nha">Gmail: 17520834@gm.uit.edu.vn</string>

    <string name="nguyenphuong">Nguyễn Thị Kim Phương</string>
    <string name="mssv_phuong">MSSV: 17520927</string>
    <string name="gmail_phuong">Gmail: 17520927@gm.uit.edu.vn</string>

    <string name="yourword">Your words</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="contribution">Contribution</string>

</resources>
