<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_save"/>
    </group>

    <item android:title="NETWORK">
        <menu>
            <item
                android:id="@+id/action_contribution"
                android:icon="@drawable/ic_rate"
                android:title="@string/nav_contribution"/>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_share"/>
        </menu>
    </item>

    <item android:title="OTHER">
        <menu>
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help"/>
            <item
                android:id="@+id/action_about_us"
                android:icon="@drawable/ic_error"
                android:title="@string/nav_about_us"/>
        </menu>

    </item>

</menu>
