<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsFragment"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_ban_tui"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cat_edit_1" />

    <LinearLayout
        android:id="@+id/layout_nha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nhabui"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/mssv_nha"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gmail_nha"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:layout_below="@+id/img_ban_tui"
        android:id="@+id/img_tui"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cat_edit_1" />

    <LinearLayout
        android:id="@+id/layout_phuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_nha"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nguyenphuong"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/mssv_phuong"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/gmail_phuong"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>


</RelativeLayout>

